# Pokemon-Text-Edition-WIP-

./: Pokemon_list.txt  Rival_Fight.py  fight_prototype.py  main.py  pokemon_moves.py  pyproject.toml  scenarios.py  screens.py  sprites.py
startup/: error_screen.py  title_screen.py
