[tool.poetry]
name = "text-game"
version = "0.1.0"
description = ""
authors = ["xOwen1218x <owencramer1218@gmail.com>, ConnerSS <connerspiegel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
